# TheGenreFactor

./: .gitignore  Makefile  README.org  Rocm.org  Todo.org  optimization_results_v2_test_by_christopher_score.csv  optimization_results_v2_test_by_val_acc.csv  pyproject.toml
HPO-data/: HPO_combined.csv  optimization_results_chris_2707.csv  optimization_results_final.csv  optimization_results_v2_test_by_christopher_score.csv  optimization_results_v2_test_by_val_acc.csv
Notes/: Todo.org
bericht/: bericht.aux  bericht.bbl  bericht.bcf  bericht.bcfg.blg  bericht.blg  bericht.run.xml  bericht.tex  bericht.toc  lit.bib
data/: batch_0.csv  batch_1000.csv  batch_10000.csv  batch_10200.csv  batch_10400.csv  batch_10600.csv  batch_10800.csv  batch_11000.csv  batch_11200.csv  batch_11400.csv  batch_11600.csv  batch_11800.csv  batch_1200.csv  batch_12000.csv  batch_12200.csv  batch_12400.csv  batch_12600.csv  batch_12800.csv  batch_13000.csv  batch_13200.csv  batch_13400.csv  batch_13600.csv  batch_13800.csv  batch_1400.csv  batch_14000.csv  batch_14200.csv  batch_14400.csv  batch_14600.csv  batch_14800.csv  batch_15000.csv  batch_15200.csv  batch_15400.csv  batch_15600.csv  batch_15800.csv  batch_1600.csv  batch_16000.csv  batch_16200.csv  batch_16400.csv  batch_16600.csv  batch_16800.csv  (+76 more)
presentation/: HPO.tex  NN.tex  appendix.tex  dataset.tex  overtraining.tex  presentation.aux  presentation.bcf  presentation.bib  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation_1.tex
scripts/: Final_final.ipynb  NN-Henry.ipynb  NN.ipynb  NN_final.ipynb  Untitled.ipynb  add_genre.py  add_genre_parallel.py  add_to_data.py  classifiers.ipynb  clustering.ipynb  combine_HP.ipynb  correlations.py  data_check.py  efficiencies.py  explore-data.py  explore_data.py  get-genre-prototype.py  get_genre.py  get_genre_prototype.py  get_genre_prototype_rewrite.py  merge_data.py  missing_p136p101.csv  (+3 more)
(+28 files in other folders)
