[tool.poetry]
name = "thegenrefactor"
version = "0.1.0"
description = "Machine learning project for the ML Seminar in the summer term 2023."
authors = ["Henry Krämerkämper <henry.kraemerkaemper@tu-dortmund.de>", "Christopher Breitfeld <christopher.breitfeld@tu-dortmund.de>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pywikibot = "^8.1.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
